# python-cngal

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: README.md
src/: const.py  database.py  main.py  network.py  storage.py
src/pycngal/: __init__.py  __main__.py  const.py  database.py  main.py  method.py  network.py
test/: test.py
