[tool.poetry]
name = "python-cngal"
version = "0.1.0"
description = "A Python wrapper for cngal.org API"
authors = ["快乐的老鼠宝宝 <keaitianxinmail@qq.com>"]
readme = "README.md"
packages = [{include = "pycngal", from="src"}]

[tool.poetry.dependencies]
python = "^3.8"
networkx = "^3.0"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
