[tool.poetry]
name = "python-cngal"
version = "0.2.2"
description = "A Python wrapper for cngal.org API"
authors = ["快乐的老鼠宝宝 <keaitianxinmail@qq.com>"]
readme = "README.md"
packages = [{include = "pycngal", from="src"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
